# solomonar

./: .gitattributes  .gitignore  README.md  STATE.md  conftest.py  index.html  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: README.md  schedule.yml  source.yml
.streamlit/: config.toml
config/: sources.yaml
connectors/: README.md  base.py
connectors/achizitii/: sicap.py
connectors/ani/: declaratii.py  redaction.py  solver.py
connectors/audit/: curteadeconturi.py  dna.py
connectors/companii/: amepip.py  (+5 more)
docs/: 00-MASTERPLAN.md  01-ARCHITECTURE.md  02-DATA-MODEL.md  03-SOURCES.md  04-LEGAL-GDPR.md  05-EXTERNAL-APIS.md  DEPLOY.md  PREZENTARE.md  PREZENTARE_SOLOMONAR.docx
pipeline/: README.md  __init__.py  _achizitii_map.json  build.py  build_alerte.py  build_ani_integrate.py  build_avere_anomalii.py  build_changelog.py  build_comisii_recent.py  build_coverage.py  build_dna_cross.py  build_duckdb.py  build_feeds.py  build_gold.py  build_graf.py  build_graph_full.py  build_graph_layout.py  build_network.py  build_parlament.py  build_partide.py  build_search.py  build_splink_apply.py  build_splink_resolution.py  config.py  cv_ocr.py  enrich_financials.py  enrich_reprezentanti.py  export.py  export_ftm.py  extract_declarant_names.py  harvest_achizitii_directe.py  harvest_actionariat_bvb.py  harvest_agentii.py  harvest_ani.py  harvest_ani_parlament.py  harvest_bgc.py  harvest_big_soe.py  harvest_bugete_uat.py  harvest_cfr.py  harvest_comisii.py  (+32 more)
web/: README.md  graf.html  graf_full.html  index.html  requirements.txt  search.html
(+183 files in other folders)
